[package]
name = "six"
version = "0.1.0"
authors = ["Ace Yin <ync@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the non-blocking networking/io lib
tokio = "0.2.0-alpha.5"
# the actor framework
actix = "0.8.3"
